--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <div id="app"></div>
 
   <script src="https://unpkg.com/navigo"></script>
-  <script type="module" src="./main.js" ></script>
+  <script type="module" src="./js/main.js" ></script>
 </body>
 </html>
